Loader fits into containers now Also removed max-height of control column to prevent overflow

--- a/assets/raw/sass/base/_structure.scss
+++ b/assets/raw/sass/base/_structure.scss
@@ -18,7 +18,7 @@ body {
 }
 
 .controls {
-  max-height: 100%; //calc(100vh - 125px);
+  //max-height: 100%; //calc(100vh - 125px);
   overflow-y: visible;
 }
 
