--- a/assets/raw/sass/components/_loader-sandbox.scss
+++ b/assets/raw/sass/components/_loader-sandbox.scss
@@ -2,10 +2,5 @@
 
 .loader-container {
   background: $background;
-  bottom: 0;
-  left: 0;
-  position: fixed;
-  right: 0;
-  top: 0;
   z-index: 100000000;
 }
