--- a/assets/raw/sass/components/_loader.scss
+++ b/assets/raw/sass/components/_loader.scss
@@ -17,7 +17,7 @@ $loader-fg: $primary;
   border-radius: 50%;
   font-size: 10px;
   height: 10em;
-  margin: 60px auto;
+  margin: 60px 60px;
   position: relative;
   text-indent: -9999em;
   transform: translateZ(0);
